ECS-CLUSTER/ALB/sg.tf
resource "aws_security_group" "alb-sg" {
  name        = "${var.db_name}-sg"
  description = "${var.db_name}-sg"
  vpc_id      = data.terraform_remote_state.net.outputs.vpc_id

  ingress {
    description = "HTTP access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
